==> nobmaste/QH_Learning_Resources/Module/DDS/AD9854/测试程序/STM32版本/STM32H750/STM32H750_AD9854测试程序V1.2(并行)/User/use/AD9854.c <==
#include "stm32h7xx.h"
#include "AD9854.h"
#include "Delay.h"
 #define CLK_Set 0x4A

void GPIO_AD9854_Configuration(void)
{ 
   	GPIO_InitTypeDef GPIO_Initure;
	__HAL_RCC_GPIOC_CLK_ENABLE();           	// 开启GPIOC时钟
  __HAL_RCC_GPIOB_CLK_ENABLE();           	// 开启GPIOB时钟

//	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4; 
//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;;		// 推挽输出
//	GPIO_Init(GPIOE, &GPIO_InitStructure);
	// 地址端口
	GPIO_Initure.Pin=GPIO_PIN_0 | GPIO_PIN_1| GPIO_PIN_2| GPIO_PIN_3| GPIO_PIN_4| GPIO_PIN_5;	
	GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  	// 
	GPIO_Initure.Pull=GPIO_PULLUP;          	// 上拉
	GPIO_Initure.Speed=GPIO_SPEED_FREQ_LOW;  // 高速
	HAL_GPIO_Init(GPIOB,&GPIO_Initure);				// 初始化
	// 数据端口	
	GPIO_Initure.Pin=GPIO_PIN_6 | GPIO_PIN_7  | GPIO_PIN_8  | GPIO_PIN_9  |	GPIO_PIN_10 | GPIO_PIN_11 | GPIO_PIN_12 | GPIO_PIN_13 ;	
	GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  	//
	GPIO_Initure.Pull=GPIO_PULLUP;          	// 上拉
	GPIO_Initure.Speed=GPIO_SPEED_FREQ_LOW;  // 高速
	HAL_GPIO_Init(GPIOC,&GPIO_Initure);				// 初始化
	// 控制端口
	GPIO_Initure.Pin=GPIO_PIN_8  | GPIO_PIN_9  |	GPIO_PIN_10 | GPIO_PIN_11 
							     | GPIO_PIN_12 | GPIO_PIN_13 |	GPIO_PIN_14; 
	GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  	// 
	GPIO_Initure.Pull=GPIO_PULLUP;          	// 上拉
	GPIO_Initure.Speed=GPIO_SPEED_FREQ_LOW;  // 高速
	HAL_GPIO_Init(GPIOB,&GPIO_Initure);				// 初始化
	
	
	

}

void AD9854_WR_Byte(u8 addr,u8 dat)
{
	u16 Tmp=0;
	u8 addr_buf;
	u8 data_buf;
	u8 i;
	addr_buf = addr;
	data_buf = dat;
	for (i = 0; i < 6; i ++)
	{
		Tmp <<= 1;
		Tmp=HAL_GPIO_ReadPin(GPIOB, ADDR_PIN[i]);

	}
	// addr
	for (i = 0; i < 6; i ++)
	{
		HAL_GPIO_WritePin(GPIOB, ADDR_PIN[i], (Tmp&0xFFFE)| (addr_buf&0x01));
		addr_buf >>= 1;
		Tmp >>= 1;
	}
	// data
		for (i = 0; i < 8; i ++)
	{
		Tmp <<= 1;
		Tmp=HAL_GPIO_ReadPin(GPIOC, DATA_PIN[i]);
	
	}
	
	for (i = 0; i < 8; i ++)
	{
		HAL_GPIO_WritePin(GPIOC, DATA_PIN[i], (data_buf&0x0001)| (Tmp & 0x00));
		data_buf >>= 1;
		Tmp >>= 1;
	}
	AD9854_WR_Clr;
	AD9854_WR_Set;
}
